// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TextField snapshots > should render TextField 1`] = `
<DocumentFragment>
  <div
    class="TextField"
    data-test-text-field=""
    data-test-tooltip=""
  >
    <div
      class="TextFieldWrapper TextFieldWrapper--filled"
      data-test-text-field-wrapper=""
    >
      <input
        class="TextFieldWrapper__input"
        data-test-text-field-input=""
        maxlength="6"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextField snapshots > should render with label 1`] = `
<DocumentFragment>
  <div
    class="TextField"
    data-test-text-field=""
    data-test-tooltip=""
  >
    <small
      class="TextFieldLabel Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      label
    </small>
    <div
      class="TextFieldWrapper TextFieldWrapper--filled"
      data-test-text-field-wrapper=""
    >
      <input
        class="TextFieldWrapper__input"
        data-test-text-field-input=""
        maxlength="6"
      />
    </div>
  </div>
</DocumentFragment>
`;
